--- a/locale/sw/LC_MESSAGES/django.po
+++ b/locale/sw/LC_MESSAGES/django.po
@@ -102,8 +102,6 @@ msgstr ""
 msgid "Adding..."
 msgstr ""
 
-#: .\templates\products\product_detail.html:125
-#: .\templates\products\product_list.html:159
 msgid "An error occurred. Please try again."
 msgstr "Hitilafu imetokea. Tafadhali jaribu tena."
 
@@ -1069,14 +1067,6 @@ msgstr ""
 msgid "Phone number must start with +255."
 msgstr "Namba ya simu lazima ianze na +255."
 
-#: .\users\forms.py:131
-msgid "Phone number must be exactly 13 digits long."
-msgstr "Namba ya simu lazima iwe na tarakimu 13 haswa."
-
-#: .\users\forms.py:135
-msgid "Phone number must only contain digits and the '+' sign."
-msgstr "Namba ya simu lazima iwe na tarakimu na alama ya '+' tu."
-
 #: .\users\forms.py:140
 msgid "This phone number is already registered. Please use a different number."
 msgstr "Namba hii ya simu tayari imesajiliwa. Tafadhali tumia namba nyingine."
@@ -1428,3 +1418,152 @@ msgstr "Kujengeka Kiuchumi"
 #: templates/landing.html:58
 msgid "Learn Biblical financial principles, small business ideas, and saving strategies for the future."
 msgstr "Jifunze kanuni za kifedha za Kibiblia, mawazo ya biashara ndogo ndogo, na mbinu za kuweka akiba kwa ajili ya siku zijazo."
+
+#: templates/cart.html:3
+msgid "Your Cart"
+msgstr "Kitenga chako"
+
+#: templates/cart.html:11
+msgid "Product"
+msgstr "Bidhaa"
+
+#: templates/cart.html:13
+msgid "Quantity"
+msgstr "Kiasi"
+
+#: templates/cart.html:16
+msgid "Action"
+msgstr "Hatua"
+
+#: templates/cart.html:29
+msgid "Update"
+msgstr "Sasisha"
+
+#: templates/cart.html:58
+msgid "Remove"
+msgstr "Ondoa"
+
+#: templates/cart.html:73
+msgid "Total:"
+msgstr "Jumla:"
+
+#: templates/cart.html:81
+msgid "Continue Shopping"
+msgstr "Endelea na Ununuzi"
+
+#: templates/cart.html:85
+msgid "Proceed to Checkout"
+msgstr "Endelea mbele"
+
+####
+#: templates/shop.html:4
+msgid "Fmk Shop - Shop"
+msgstr "Fmk Shop - Duka"
+
+#: templates/shop.html:11
+msgid "Now"
+msgstr "Sasa"
+
+#: templates/shop.html:13
+msgid "Order any book you like from the lists below."
+msgstr "Agiza kitabu chochote ukipendacho kutoka kwenye orodha zifuatazo."
+
+#: templates/shop.html:19
+msgid "Book lists."
+msgstr "Orodha za vitabu."
+
+#: templates/shop.html:26
+msgid "Choose from the options below by clicking the relevant section."
+msgstr "Chagua kutoka kwa chaguzi zilizo hapa chini kwa kubonyeza sehemu husika."
+
+#: templates/shop.html:48
+msgid "No options available."
+msgstr "Hakuna chaguzi zozote."
+
+#: templates/shop.html:60
+msgid "All Books"
+msgstr "Vitabu vyote"
+
+#: templates/shop.html:74
+msgid "Price:"
+msgstr "Kiasi:"
+
+#: templates/shop.html:88
+msgid "See more"
+msgstr "Tazama zaidi"
+
+msgid "Try searching another section."
+msgstr "Jaribu kutafuta sehemu nyingine."
+
+msgid "No books."
+msgstr "Hakuna vitabu."
+
+msgid "Search book"
+msgstr "Tafuta kitabu"
+
+msgid "Filters"
+msgstr "Machaguzi"
+
+#: templates/place_order.html:4
+msgid "Place Order"
+msgstr "Weka Agizo"
+
+#: templates/place_order.html:28
+msgid "Enter your information"
+msgstr "Ingiza taarifa zako"
+
+#: templates/place_order.html:33
+msgid "Name:"
+msgstr "Jina:"
+
+#: templates/place_order.html:40
+msgid "E.g., John Doe"
+msgstr "Mfano, Mussa Daniel"
+
+#: templates/place_order.html:47
+msgid "Address:"
+msgstr "Mahali:"
+
+#: templates/place_order.html:54
+msgid "E.g., Dodoma, UDOM, CIVE, 1A-S39"
+msgstr "Mfano, Dodoma, UDOM, CIVE, 1A-S39"
+
+#: templates/place_order.html:61
+msgid "Email Address:"
+msgstr "Anuani ya Barua pepe:"
+
+#: templates/place_order.html:68
+msgid "E.g., example@gmail.com"
+msgstr "Mfano, mfano@gmail.com"
+
+#: templates/place_order.html:75
+msgid "Phone Number:"
+msgstr "Namba ya Simu:"
+
+#: templates/place_order.html:102
+msgid "Your account information:"
+msgstr "Taarifa zako za akaunti:"
+
+#: templates/place_order.html:107
+msgid "Change your details here"
+msgstr "Badilisha taarifa zako hapa"
+
+#: templates/place_order.html:121
+msgid "Delivery address:"
+msgstr "Mahali pa kupokea:"
+
+#: templates/place_order.html:172
+msgid "Phone number must be exactly 13 digits long."
+msgstr "Namba ya simu lazima iwe na tarakimu 13 hasa."
+
+#: templates/place_order.html:173
+msgid "Phone number must start with +2556 or +2557."
+msgstr "Namba ya simu lazima ianze na +2556 au +2557."
+
+#: templates/place_order.html:174
+msgid "Phone number must only contain digits and the '+' sign."
+msgstr "Namba ya simu lazima iwe na tarakimu na alama ya '+' tu."
+
+#: templates/place_order.html:175
+msgid "Please ensure the phone number is formatted correctly."
+msgstr "Tafadhali hakikisha namba ya simu imeandikwa kwa usahihi."
